// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component renders correctly with no resource 1`] = `
<section
  id={null}
>
  test child
  <Connect(SecondaryNav) />
</section>
`;

exports[`Section component renders correctly with resource containing title and helptext 1`] = `
<section
  id={null}
>
  <h2
    className="ds-h2"
  >
    APD Overview
  </h2>
  apd test child
  <Connect(SecondaryNav) />
</section>
`;

exports[`Section component renders correctly with resource containing title but no helptext 1`] = `
<section
  id={null}
>
  <h2
    className="ds-h2"
  >
    Outcomes and Metrics
  </h2>
  outcomes test child
  <Connect(SecondaryNav) />
</section>
`;

exports[`Subsection component renders correctly 1`] = `
<div
  className="subsection--title"
>
  <h3
    className=" ds-h3"
    id={null}
  >
    Outcomes and Metrics
  </h3>
  <Instruction
    args={null}
    disableTitleCaseConversion={false}
    headingDisplay={
      Object {
        "className": "ds-h3",
        "level": "h3",
      }
    }
    labelFor={null}
    reverse={false}
    source="activities.outcomes.instruction"
  />
  test child
</div>
`;

exports[`Subsection component uses the passed-in heading class 1`] = `
<div
  className="subsection--title"
>
  <h3
    className="bobs-burgers ds-h3"
    id={null}
  >
    Outcomes and Metrics
  </h3>
  <Instruction
    args={null}
    disableTitleCaseConversion={false}
    headingDisplay={
      Object {
        "className": "ds-h3",
        "level": "h3",
      }
    }
    labelFor={null}
    reverse={false}
    source="activities.outcomes.instruction"
  />
  test child
</div>
`;
